set script.js path and add yarn

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,6 +113,6 @@
 
     <!-- footer section ends -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <%= javascript_include_tag "/assets/script" %>
+    <%= javascript_include_tag asset_path '/assets/script.js'%>
   </body>
 </html>
