change item name and price

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Food</title>
+    <title>Food Resturant</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complete Responsive Food Website Design Tutorial</title>
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
@@ -106,7 +105,7 @@
 
         </div>
 
-        <div class="credit"> copyright @ 2021 by <span><a href="https://web.facebook.com/profile.php?id=100008314123798">Mr. Fahim</a></span> </div>
+        <div class="credit"> copyright @ 2021 by <span><a href="https://web.facebook.com/profile.php?id=100008314123798">Mr. Fahim Ashraf</a></span> </div>
 
     </section>
 
