--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
                 <div class="content">
                     <span>our special dish</span>
                     <h3>spicy noodles</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
+                    <p>Noodles are a type of food made from unleavened dough which is rolled flat and cut, stretched or extruded, into long strips or strings. Noodles can be refrigerated for short-term storage or dried and stored for future use.</p>
                     <a href="#" class="btn">order now</a>
                 </div>
                 <div class="image">
@@ -21,8 +21,8 @@
             <div class="swiper-slide slide">
                 <div class="content">
                     <span>our special dish</span>
-                    <h3>fried chicken</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
+                    <h3>Fried Chicken</h3>
+                    <p>Frying, the cooking of food in hot fats or oils, usually done with a shallow oil bath in a pan over a fire or as so-called deep fat frying, in which the food is completely immersed in a deeper vessel of hot oil. ... Relatively lean meats, fish, and vegetables are often floured or dipped in batter before being fried</p>
                     <a href="#" class="btn">order now</a>
                 </div>
                 <div class="image">
@@ -33,8 +33,8 @@
             <div class="swiper-slide slide">
                 <div class="content">
                     <span>our special dish</span>
-                    <h3>hot pizza</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit natus dolor cumque?</p>
+                    <h3>Hot Pizza</h3>
+                    <p>Hot ovens mean that the pizza stone inside stays hot consistently, so there is no waiting while the stone heats up to cook another pizza. The stone retains heat between cooking pizzas, so you can cook one in just a few minutes.</p>
                     <a href="#" class="btn">order now</a>
                 </div>
                 <div class="image">
@@ -65,7 +65,7 @@
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
             <img src="<%=image_url('dish-1.png')%>" alt="">
-            <h3>tasty food</h3>
+            <h3>Burger</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -73,7 +73,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <span>$15.99</span>
+            <span>Rs:300</span>
             <a href="#" class="btn">add to cart</a>
         </div>
 
@@ -81,7 +81,7 @@
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
             <img src="<%=image_url('dish-2.png')%>" alt="">
-            <h3>tasty food</h3>
+            <h3>Nugguts</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -89,7 +89,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <span>$15.99</span>
+            <span>Rs:500</span>
             <a href="#" class="btn">add to cart</a>
         </div>
 
@@ -97,7 +97,7 @@
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
             <img src="<%=image_url('dish-3.png')%>" alt="">
-            <h3>tasty food</h3>
+            <h3>Chicken</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -105,7 +105,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <span>$15.99</span>
+            <span>Rs:400</span>
             <a href="#" class="btn">add to cart</a>
         </div>
 
@@ -113,7 +113,7 @@
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
             <img src="<%=image_url('dish-4.png')%>" alt="">
-            <h3>tasty food</h3>
+            <h3>Pizza </h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -121,7 +121,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <span>$15.99</span>
+            <span>Rs:699</span>
             <a href="#" class="btn">add to cart</a>
         </div>
 
@@ -129,7 +129,7 @@
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
             <img src="<%=image_url('dish-5.png')%>" alt="">
-            <h3>tasty food</h3>
+            <h3>Ice Cream</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -137,7 +137,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <span>$15.99</span>
+            <span>Rs:350</span>
             <a href="#" class="btn">add to cart</a>
         </div>
 
@@ -145,7 +145,7 @@
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
             <img src="<%=image_url('dish-6.png')%>" alt="">
-            <h3>tasty food</h3>
+            <h3>Chicken</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -153,7 +153,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <span>$15.99</span>
+            <span>Rs:499</span>
             <a href="#" class="btn">add to cart</a>
         </div>
 
@@ -178,8 +178,8 @@
 
         <div class="content">
             <h3>best food in the country</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, sequi corrupti corporis quaerat voluptatem ipsam neque labore modi autem, saepe numquam quod reprehenderit rem? Tempora aut soluta odio corporis nihil!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, nemo. Sit porro illo eos cumque deleniti iste alias, eum natus.</p>
+            <p>Chicken Samosa is a delicious, juicy Pakistani Samosa variety made with a combination of minced meat (typically lamb), onions, garlic, ginger, coriander, juice, yogurt, and garam masala. The spices used in the dish can be modified according to personal preferences.</p>
+            <p>The meat mixture is placed on skewers, and the samosa are then grilled over hot coals, giving them a nice smokey flavor in the process,Chicken Samosa is traditionally served piping hot with salads, onions, fries, mint chutney, or flatbreads on the side.</p>
             <div class="icons-container">
                 <div class="icons">
                     <i class="fas fa-shipping-fast"></i>
@@ -225,10 +225,10 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <h3>delicious food</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
+                <h3>Hot Pizza</h3>
+                <p>Pizza made with some combination of olive oil, oregano, tomato, olives, mozzarella or other cheese, and many other ingredients</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Rs:1200</span>
             </div>
         </div>
 
@@ -245,10 +245,10 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <h3>delicious food</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
+                <h3> Burger</h3>
+                <p> Burger is a food,typically considered a sandwich,consisting of one or more cooked patties of ground meat,beef,placed inside a sliced bread.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Rs:550</span>
             </div>
         </div>
 
@@ -265,10 +265,10 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <h3>delicious food</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
+                <h3> Parathas</h3>
+                <p>Paratha are made with whole wheat flour (atta), salt, water & ghee or oil. These are served for a breakfast with a side of curd,eggs and meat dishes.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Rs:630</span>
             </div>
         </div>
 
@@ -285,10 +285,10 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <h3>delicious food</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
+                <h3>Ice Cream</h3>
+                <p>Ice cream is a sweetened frozen food.It's made from dairy milk or cream and is flavoured with sugar and spice.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Rs:540</span>
             </div>
         </div>
 
@@ -305,10 +305,10 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <h3>delicious food</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
+                <h3>Fruit Cakes</h3>
+                <p>Fruitcake is a cake made with candied or dried fruit, nuts, and spices, and optionally soaked in spirits.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Rs:999</span>
             </div>
         </div>
 
@@ -325,10 +325,10 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <h3>delicious food</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
+                <h3>Hot Cakes</h3>
+                <p>Hot Cake is a cake made with candied or dried fruit, nuts, and spices, and optionally soaked in spirits.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Rs:699</span>
             </div>
         </div>
 
@@ -345,10 +345,11 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <h3>delicious food</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
+                <h3>Fruits Juice</h3>
+                <p>Juice is a drink made from the natural liquid contained in fruit , water and sugar.
+                </p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Rs:340</span>
             </div>
         </div>
 
@@ -365,10 +366,10 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <h3>delicious food</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
+                <h3>Fruit Chaat</h3>
+                <p>Fruit chaat is a spicy, tangy.Various fruits are mixed with a spice blend and chaat masala.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Rs:450</span>
             </div>
         </div>
 
@@ -385,10 +386,10 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <h3>delicious food</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
+                <h3>Lemon Juice</h3>
+                <p>Lemon juice is most commonly used in a drink called lemonade which is made by using lemon juice, water and sugar.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Rs:150</span>
             </div>
         </div>
 
