--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -15,6 +15,7 @@
     outline: none; border:none;
     text-transform: capitalize;
     transition: all .2s linear;
+    font-size: 15px;
 }
 
 html{
