--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -497,46 +497,46 @@
     <h3 class="sub-heading"> order now </h3>
     <h1 class="heading"> free and fast </h1>
 
-    <form action="">
+    <form action="home/receive_order" method="get">
 
         <div class="inputBox">
             <div class="input">
                 <span>your name</span>
-                <input type="text" placeholder="enter your name">
+                <input type="text" name="customer_name" placeholder="enter your name" required="true">
             </div>
             <div class="input">
                 <span>your number</span>
-                <input type="number" placeholder="enter your number">
+                <input type="number" name="customer_number" placeholder="enter your number" required="true">
             </div>
         </div>
         <div class="inputBox">
             <div class="input">
                 <span>your order</span>
-                <input type="text" placeholder="enter food name">
+                <input type="text" name="customer_order" placeholder="enter food name" required="true">
             </div>
             <div class="input">
                 <span>additional food</span>
-                <input type="test" placeholder="extra with food">
+                <input type="test" name="customer_food" placeholder="extra with food" required="true">
             </div>
         </div>
         <div class="inputBox">
             <div class="input">
                 <span>how musch</span>
-                <input type="number" placeholder="how many orders">
+                <input type="number" name="customer_food_quantity" placeholder="how many orders" required="true">
             </div>
             <div class="input">
                 <span>date and time</span>
-                <input type="datetime-local">
+                <input type="datetime-local" name="customer_date_time" required="true">
             </div>
         </div>
         <div class="inputBox">
             <div class="input">
                 <span>your address</span>
-                <textarea name="" placeholder="enter your address" id="" cols="30" rows="10"></textarea>
+                <textarea  name="customer_adress" placeholder="enter your address" id="" required="true" cols="30" rows="10"></textarea>
             </div>
             <div class="input">
                 <span>your message</span>
-                <textarea name="" placeholder="enter your message" id="" cols="30" rows="10"></textarea>
+                <textarea  name="customer_message" placeholder="enter your message" id="" required="true" cols="30" rows="10"></textarea>
             </div>
         </div>
 
