--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
 
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+      
   </head>
 
   <body>
@@ -23,15 +25,15 @@
 
     <header>
 
-        <a href="#" class="logo"><i class="fas fa-utensils"></i>resto.</a>
+        <a href="/" class="logo"><i class="fas fa-utensils"></i>resto.</a>
 
         <nav class="navbar">
-            <a class="active" href="#home">home</a>
-            <a href="#dishes">dishes</a>
-            <a href="#about">about</a>
-            <a href="#menu">menu</a>
-            <a href="#review">review</a>
-            <a href="#order">order</a>
+            <a class="active" href="/#home">home</a>
+            <a href="/#dishes">dishes</a>
+            <a href="/#about">about</a>
+            <a href="/#menu">menu</a>
+            <a href="/#review">review</a>
+            <a href="/#order">order</a>
         </nav>
 
         <div class="icons">
