--- a/app/views/home/receive_order.html.erb
+++ b/app/views/home/receive_order.html.erb
@@ -1,12 +1,12 @@
-<div class="container">
+<div class="box-container">>
   <br>
 <br>
 <br>
 <br>
 <br>
-<h1>Order has been placed successfully</h1>
-<h2>Our Employee will contact you soon</h2>
-<h3>You  have enter your information as written below:</h3>
+<h1 style="color:  green;" >Order has been placed successfully</h1>
+<h2 style="color: green;">Our Employee will contact you soon</h2>
+<h3 style="color: green;">You  have enter your information as written below:</h3>
 <label>Customer Name:</label>
 <p><%=@contact.customer_name%></p>
 
